added array and loops to javascript

--- a/index.html
+++ b/index.html
@@ -7,43 +7,13 @@
 	<script src="js/script.js"></script>
 </head>
 <body>
-	<div class="wrapper">
-		<div class="leftside">
-			<!-- <fieldset class="pokenames"> -->
-			<!-- 	<legend>
-					<label for="names">
-						Names
-					</label>
-				</legend> -->
-					<div id="pokegrid" class="pokegrid">
-						<!-- <div class="poke1, pokegridlay">one</div>
-						<div class="poke2, pokegridlay">two</div>
-						<div class="poke3, pokegridlay">three</div>
-						<div class="poke4, pokegridlay">four</div>
-						<div class="poke4, pokegridlay">five</div>
-						<div class="poke6, pokegridlay">six</div>
-						<div class="poke7, pokegridlay">seven</div>
-						<div class="poke8, pokegridlay">eight</div>
-						<div class="poke9, pokegridlay">nine</div>
-						<div class="poke10, pokegridlay">ten</div>
-						<div class="poke11, pokegridlay">eleven</div>
-						<div class="poke12, pokegridlay">twelve</div> -->
-					</div>
-				
-			<!-- </fieldset> -->
-		</div>
-
-
-
-		<div class="rightside">
-			<div class="pokedisplay">
-				<div id ="pokeimage" class="poimage"></div>
-
-			</div>
-
-		</div>
+	
 		
-	</div>
-	<script src="js/script.js"></script>
+	<ul id="pokenames">
+		<li>bulbasaur</li>
+		<li>squirtle</li>
+		<li>charmander</li>
+	</ul>
+
 </body>
 </html>
